fix overflow problem

--- a/components/terminalOverlay.module.scss
+++ b/components/terminalOverlay.module.scss
@@ -26,7 +26,7 @@
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
   color: white;
-  padding: 10px;
+
   z-index: 1000;
   font-family: monospace;
   height: 100vh;
@@ -34,6 +34,8 @@
 
 .terminalBody {
   height: 100%;
+  overflow-y: auto;
+  padding: 10px;
 
   * {
     font-family: 'Courier New', monospace;
